refactor: remove SaleStatusHistory and related code
- Deleted `SaleStatusHistory` entity, repository, and service implementations.
- Removed unused `V6__add_sale_status_history.sql` migration and associated database schema changes.
- Refactored `SaleRepository` to simplify data access after removal.
- Updated DTOs, requests, and responses to align with the new simplified structure.
- Cleaned up redundant seed data and development-specific migration files.